syntax = "proto3";

package inventory;

option go_package = "proto/inventory";

import "google/protobuf/timestamp.proto";

service ProductService {
  rpc CreateProduct(CreateProductRequest) returns (ProductResponse);
  rpc GetProduct(ProductIDRequest) returns (ProductResponse);
  rpc UpdateProduct(UpdateProductRequest) returns (ProductResponse);
  rpc DeleteProduct(ProductIDRequest) returns (DeleteResponse);
  rpc ListProducts(ListProductsRequest) returns (ListProductsResponse);
  rpc CheckStock(CheckStockRequest) returns (CheckStockResponse);
}

message CreateProductRequest {
  string name = 1;
  string description = 2;
  double price = 3;
  int32 stock = 4;
  string category_id = 5;
}

message ProductIDRequest {
  string id = 1;
}

message UpdateProductRequest {
  string id = 1;
  string name = 2;
  string description = 3;
  double price = 4;
  int32 stock = 5;
  string category_id = 6;
}

message ProductResponse {
  string id = 1;
  string name = 2;
  string description = 3;
  double price = 4;
  int32 stock = 5;
  string category_id = 6;
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp updated_at = 8;
}

message DeleteResponse {
  bool success = 1;
  string message = 2;
}

message ProductFilter {
  string category_id = 1;
  double min_price = 2;
  double max_price = 3;
  bool in_stock = 4;
  int32 page = 5;
  int32 page_size = 6;
}

message ListProductsRequest {
  ProductFilter filter = 1;
}

message ListProductsResponse {
  repeated ProductResponse products = 1;
  int32 total = 2;
  int32 page = 3;
  int32 page_size = 4;
}

message CheckStockRequest {
  repeated ProductQuantity items = 1;
}

message ProductQuantity {
  string product_id = 1;
  int32 quantity = 2;
}

message CheckStockResponse {
  bool available = 1;
  repeated ProductQuantity unavailable_items = 2;
}